Addind date parsing in ooxml import tests